--- a/public_HTTPS/sageUI.html
+++ b/public_HTTPS/sageUI.html
@@ -150,9 +150,15 @@
 			sagePtr.setPointerId(data.UID)
 		});
 		
+		wsio.on('createAppWindowPositionSizeOnly', function(data) {
+			winMgr.addAppWindow(data);
+		});
+		
+		/*
 		wsio.on('addNewElementPositionSizeTypeOnly', function(elem_data) {
 			winMgr.addNewElement(elem_data);
 		});
+		*/
 		
 		wsio.on('deleteElement', function(elem_data) {
 			winMgr.deleteElement(elem_data.elemId);
