working on pushing media stream to remote site
Former-commit-id: ea07a25909a8c481a3ca277c0c1f9bc64ea1b0fc

--- a/public_HTTPS/index.html
+++ b/public_HTTPS/index.html
@@ -276,7 +276,7 @@
 			wsio.emit('receivedMediaStreamFrame', {id: data.id});
 			
 			var app = applications[data.id];
-			console.log(app);
+			console.log(data.state);
 			if(app !== undefined && app !== null){
 				app.load(data.state);
 			}
