updated icewall GO scripts
Former-commit-id: fd240b54cc0b8cd9f553ce0b35106f39ec49acb2

--- a/public_HTTPS/index.html
+++ b/public_HTTPS/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
 <meta charset="utf-,8">
-<title>Node Test</title>
+<title>SAGE2: Display</title>
 <script type="text/javascript" src="lib/websocket.io.js"></script>
 <script type="text/javascript" src="lib/Class.js"></script>
 <script type="text/javascript" src="lib/SAGE2_App.js"></script>
@@ -13,9 +13,11 @@
 
 <script type="text/javascript" src="scripts/pointer.js"></script>
 <script type="text/javascript" src="scripts/pdf.js"></script>
-<!-- <script type="text/javascript" src="scripts/glMatrix-0.9.5.min.js"></script> -->
+<!--
+<script type="text/javascript" src="scripts/glMatrix-0.9.5.min.js"></script>
 <script type="text/javascript" src="scripts/kinetic-v4.7.4.min.js"></script>
 <script type="text/javascript" src="scripts/three.min.js"></script>
+-->
 
 <script type="text/javascript">
 	var clientID;
