--- a/public_HTTPS/index.html
+++ b/public_HTTPS/index.html
@@ -35,6 +35,9 @@
 -->
 
 <script type="text/javascript">
+	window.URL = (window.URL || window.webkitURL || window.msURL || window.oURL);
+
+
 	var clientID;
 	var offsetX;
 	var offsetY;
@@ -540,10 +543,6 @@
 				var date = new Date(position_data.date);
 				app.resize(date);
 			}
-			/*
-			// triggers the resize callback in the application
-			if(child[0].id in canvasItems) canvasItems[child[0].id].resize(date);
-			*/
 		});
 		
 		wsio.on('finishedResize', function(data) {
@@ -552,16 +551,6 @@
 				var date = new Date(data.date);
 				app.resize(date);
 			}
-			
-			/*
-			var selectedElem = document.getElementById(elem.id);
-			
-			var child = selectedElem.getElementsByClassName("sageItem");
-			
-			if(child[0].id in pdfItems){
-				pdfItems[child[0].id].renderPage();
-			}
-			*/
 		});
 		
 		wsio.on('updateVideoItemTime', function(video_data) {
@@ -589,16 +578,6 @@
 				app.refresh(date);
 				wsio.emit('finishedRenderingAppFrame', {id: data.id});
 			}
-			
-			/*
-			var canvasElem = document.getElementById(animate_data.elemId);
-			if(canvasElem != null){
-				var child = canvasElem.getElementsByClassName("sageItem");
-				if(child[0].id in canvasItems){
-					canvasItems[child[0].id].refresh(date);
-				}
-			}
-			*/
 		});
 		
 		wsio.on('eventInItem', function(event_data){
@@ -606,28 +585,6 @@
 			
 			var app = applications[event_data.elemId];
 			app.event(event_data.eventType, event_data.user_id, event_data.itemRelativeX, event_data.itemRelativeY, event_data.data, date);
-			
-			/*
-			var selectedElem = document.getElementById(event_data.elemId);
-			var child = selectedElem.getElementsByClassName("sageItem");
-			if(child[0].id in canvasItems){
-				if( typeof canvasItems[child[0].id].event === "function" )
-					canvasItems[child[0].id].event( event_data.eventType, event_data.user_id, event_data.itemRelativeX, event_data.itemRelativeY, event_data.data, date);  
-			}
-
-            if(child[0].tagName.toLowerCase() == "iframe"){
-                //child[0].contentWindow.postMessage('
-            }
-            
-            if(event_data.eventType == "specialKey"){
-				if(event_data.data.code == 37 && event_data.data.state == "up"){ // left arrow
-					if(child[0].id in pdfItems) pdfItems[child[0].id].goPrevious();
-				}
-				if(event_data.data.code == 39 && event_data.data.state == "up"){ // right arrow
-					if(child[0].id in pdfItems) pdfItems[child[0].id].goNext();
-				}
-			}
-			*/
 		});
 	}
 </script>
