--- a/public_HTTPS/index.html
+++ b/public_HTTPS/index.html
@@ -54,6 +54,8 @@
 	var port;
 	var dt;
 	
+	var hostAlias = {};
+	
 	var itemCount = 0;
 	var pdfItems = {};
 	var pointerItems = {};
@@ -134,6 +136,14 @@
 		});
 		
 		wsio.on('setupDisplayConfiguration', function(json_cfg) {
+			var i;
+			if(window.location.hostname !== json_cfg.host)
+				hostAlias[json_cfg.host] = window.location.hostname;
+			for(i=0; i<json_cfg.alternate_hosts.length; i++){
+				if(window.location.hostname !== json_cfg.alternate_hosts[i])
+					hostAlias[json_cfg.alternate_hosts[i]] = window.location.hostname;
+			}
+			
 			offsetX = json_cfg.displays[clientID].column * json_cfg.resolution.width;
 			offsetY = json_cfg.displays[clientID].row * json_cfg.resolution.height;
 			titleBarHeight = json_cfg.titleBarHeight;
@@ -359,8 +369,13 @@
 			// App launched in window 
 			if(data.application === "media_stream") wsio.emit('receivedMediaStreamFrame', {id: data.id});
 			
-			// load all resources
-			var i;
+			// convert url if hostname is alias for current origin
+			var a = document.createElement("a");
+			a.href = data.url;
+			var url = data.url;
+			if(hostAlias[a.hostname] !== undefined)
+				url = data.url.replace(a.hostname, hostAlias[a.hostname]);
+			
 			function loadApplication() {
 				// load new app
 				if(window[data.application] === undefined) {
@@ -370,7 +385,7 @@
 					}, false);
 					js.addEventListener('load', function(event) {
 						var app = new window[data.application];
-						app.init(data.id, data.width, data.height, data.url, date);
+						app.init(data.id, data.width, data.height, url, date);
 						
 						if(app.state !== undefined && clientID===0){
 							Object.observe(app.state, function(changes) {
@@ -392,7 +407,7 @@
 				// load existing app
 				else {
 					var app = new window[data.application];
-					app.init(data.id, data.width, data.height, data.url, date);
+					app.init(data.id, data.width, data.height, url, date);
 
 					if(app.state !== undefined && clientID===0){
 						Object.observe(app.state, function(changes) {
@@ -408,10 +423,12 @@
 				}
 			};
 			
+			// load all resources
 			if(data.resrc === undefined || data.resrc === null || data.resrc.length === 0){
 				loadApplication();
 			}
 			else {
+				var i;
 				var resources = {};
 				for(i=0; i<data.resrc.length; i++){
 					resources[data.resrc[i]] = false;
@@ -430,7 +447,7 @@
 						}
 					}, false);
 					js.type = "text/javascript";
-					js.src = data.url + "/" + element;
+					js.src = url + "/" + element;
 					document.head.appendChild(js);
 				});
 			}
