--- a/public_HTTPS/index.html
+++ b/public_HTTPS/index.html
@@ -702,8 +702,10 @@
 </head>
 
 <body onload="init()">
-	<div id="main">
-		<!-- the rest is built programmatically by the uiBuilder -->
+	<div id="background">
+		<div id="main">
+			<!-- the rest is built programmatically by the uiBuilder -->
+		</div>
 	</div>
 </body>
 </html>
