CHANGE: server.js getSavedFilesList() now returns { filename, thumbnail } NEW: server.js getSavedFilesList() sends custom app icon path as thumbnail NEW: Thumbnail browser now displays custom app icons FIX: Thumbnail browser websockets
Former-commit-id: 34e39bbaa7db9bf1f08ea8539f108d2d87c1e58a

--- a/public_HTTPS/sageUI.html
+++ b/public_HTTPS/sageUI.html
@@ -291,7 +291,7 @@
 		files[type].sort();
 		for(var i=0; i<files[type].length; i++){
 			var listElem = document.createElement("li");
-			listElem.innerHTML = files[type][i];
+			listElem.innerHTML = files[type][i].filename;
 			listElem.addEventListener('click', selectFile, false);
 						
 			dir.appendChild(listElem);
