added version number and date to upper bar of displays: use show_version: true in config file
Former-commit-id: d2878a66d7417c8231c156b922e0adc3d09cc57d

--- a/public_HTTPS/index.html
+++ b/public_HTTPS/index.html
@@ -159,6 +159,10 @@
 			ui.background();
 		});
 		
+		wsio.on('setupSAGE2Version', function(version) {
+			ui.updateVersionText(version);
+		});
+		
 		wsio.on('setSystemTime', function(data) {
 			ui.setTime(new Date(data.date));
 		});
