added pop-up box on sageUI with how to use SAGE Pointer
Former-commit-id: 427a463cf5d2dfb2bd6a54543001b7507bedf30b

--- a/public_HTTPS/sagePointerApp.html
+++ b/public_HTTPS/sagePointerApp.html
@@ -136,6 +136,14 @@
 		fileDropText.style.marginTop = fileDropTextMargin.toString() + "px";
 	}
 	
+	function sagePointerEnabled() {
+		
+	}
+	
+	function sagePointerDisabled() {
+		
+	}
+	
 	function openSettings(event) {
 		document.getElementById("settings").style.display = "block";
 	}
