--- a/public_HTTPS/index.html
+++ b/public_HTTPS/index.html
@@ -554,6 +554,7 @@
 			if (data.elemId != null){
 				if(data.elemId+"_controls" in  controlItems){
 					var size = computeSize(controlItems[data.elemId+ "_controls"].spec) ;
+					console.log(size);
 					wsio.emit('addNewControl', {
 						id:data.elemId+"_controls", 
 						left:data.x,
